--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "preact build --prerenderUrls ./prerender-urls.js",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --prerender --prerenderUrls ./prerender-urls.js",
+    "dev": "preact watch --prerender --prerenderUrls ./prerender-urls.js --refresh",
     "lint": "eslint src",
     "test": "jest"
   },
@@ -32,6 +32,7 @@
     "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.13.2",
     "@preact/prerender-data-provider": "^3.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
