--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "preact-cli-plugin-netlify": "^1.5.0",
     "preact-render-to-string": "^5.0.6",
     "preact-router": "^3.0.1",
-    "tailwindcss": "^3.0.17"
+    "tailwindcss": "^3.0.17",
+    "yt-player": "^3.5.0"
   },
   "jest": {
     "preset": "jest-preset-preact"
