--- a/package.json
+++ b/package.json
@@ -1,50 +1,44 @@
 {
-  "private": true,
-  "name": "stroom-ng",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "preact build --prerenderUrls ./prerender-urls.js",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --prerender --prerenderUrls ./prerender-urls.js --refresh",
-    "lint": "eslint src",
-    "test": "jest"
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-synacor"
-  },
-  "eslintIgnore": [
-    "build/*"
-  ],
-  "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-synacor": "^2.0.2",
-    "esm": "^3.2.25",
-    "file-loader": "^6.2.0",
-    "glob": "^7.1.4",
-    "jest": "^21.2.1",
-    "jest-preset-preact": "^1.0.0",
-    "markdown": "^0.5.0",
-    "per-env": "^1.0.2",
-    "preact-cli": "^3.0.0",
-    "preact-render-spy": "^1.2.1",
-    "sirv-cli": "1.0.3",
-    "webpack-bundle-analyzer": "^3.4.1"
-  },
-  "dependencies": {
-    "@googlemaps/js-api-loader": "^1.13.2",
-    "@preact/prerender-data-provider": "^3.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "markdown-to-jsx": "^6.10.3",
-    "preact": "^10.0.0",
-    "preact-cli-plugin-netlify": "^1.5.0",
-    "preact-render-to-string": "^5.0.6",
-    "preact-router": "^3.0.1",
-    "tailwindcss": "^3.0.17",
-    "yt-player": "^3.5.0"
-  },
-  "jest": {
-    "preset": "jest-preset-preact"
-  }
+	"private": true,
+	"name": "stroom-ng",
+	"version": "1.0.0",
+	"license": "MIT",
+	"scripts": {
+		"build": "preact build --prerenderUrls ./prerender-urls.js",
+		"serve": "sirv build --port 8080 --cors --single",
+		"dev": "preact watch --prerender --prerenderUrls ./prerender-urls.js --refresh",
+		"lint": "eslint src"
+	},
+	"eslintConfig": {
+		"extends": "eslint-config-synacor"
+	},
+	"eslintIgnore": [
+		"build/*"
+	],
+	"devDependencies": {
+		"eslint": "^4.9.0",
+		"eslint-config-synacor": "^2.0.2",
+		"esm": "^3.2.25",
+		"file-loader": "^6.2.0",
+		"glob": "^7.1.4",
+		"markdown": "^0.5.0",
+		"per-env": "^1.0.2",
+		"preact-cli": "^3.0.0",
+		"preact-render-spy": "^1.2.1",
+		"sirv-cli": "1.0.3",
+		"webpack-bundle-analyzer": "^3.4.1"
+	},
+	"dependencies": {
+		"@googlemaps/js-api-loader": "^1.13.2",
+		"@preact/prerender-data-provider": "^3.0.0",
+		"imagemin-mozjpeg": "^8.0.0",
+		"imagemin-webpack-plugin": "^2.4.2",
+		"markdown-to-jsx": "^6.10.3",
+		"preact": "^10.0.0",
+		"preact-cli-plugin-netlify": "^1.5.0",
+		"preact-render-to-string": "^5.0.6",
+		"preact-router": "^3.0.1",
+		"tailwindcss": "^3.0.17",
+		"yt-player": "^3.5.0"
+	}
 }
