Changed field to fields in CMS config

--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -50,7 +50,7 @@ collections:
                 - label: Names
                   name: names
                   widget: list
-                  field:
+                  fields:
                     - {label: Name, name: name, widget: string}
             - label: Tile Three
               name: tileThree
