--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -64,7 +64,7 @@ collections:
             fields:
               - {label: Title, name: title, widget: string}
           - label: Venue
-            name: map
+            name: venue
             widget: object
             fields:
               - {label: Description, name: description, widget: markdown}
