--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"markdown-to-jsx": "^6.10.3",
 		"preact": "^10.0.0",
 		"preact-cli-plugin-netlify": "^1.5.0",
+		"preact-markdown": "^2.1.0",
 		"preact-render-to-string": "^5.0.6",
 		"preact-router": "^3.0.1",
 		"tailwindcss": "^3.0.17",
