feat: Update content

--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -117,7 +117,7 @@ collections:
                     widget: list
                     fields:
                       - {label: Question, name: question, widget: string}
-                      - {label: Answer, name: answer, widget: string}
+                      - {label: Answer, name: answer, widget: markdown}
               - {label: Copyright name, name: copyrightName, widget: string}
                   
                 
