fix: Update branch in config.yml

--- a/src/static/config.yml
+++ b/src/static/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: feature/venue
+  branch: main
 media_folder: content/images
 public_folder: /assets
 collections:
